--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rand = "0.8.5"
 RayBNN_Sparse = "0.1.4"
+RayBNN_DataLoader = "0.1.3"
 
 [dev-dependencies]
 arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
@@ -30,6 +31,7 @@ num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rand = "0.8.5"
 RayBNN_Sparse = "0.1.4"
+RayBNN_DataLoader = "0.1.3"
 
 [build-dependencies]
 arrayfire = { version = "3.8.1", package = "arrayfire_fork" }
@@ -39,6 +41,8 @@ num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rand = "0.8.5"
 RayBNN_Sparse = "0.1.4"
+RayBNN_DataLoader = "0.1.3"
+
 
 [lib]
 name = "RayBNN_Graph"
