--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rand = "0.8.5"
+nohash-hasher = "0.2.0"
 RayBNN_Sparse = "0.1.5"
 RayBNN_DataLoader = "0.1.3"
 
@@ -30,6 +31,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rand = "0.8.5"
+nohash-hasher = "0.2.0"
 RayBNN_Sparse = "0.1.5"
 RayBNN_DataLoader = "0.1.3"
 
@@ -40,6 +42,7 @@ num = "0.4.1"
 num-traits = "0.2.16"
 half = { version = "2.3.1" , features = ["num-traits"] }
 rand = "0.8.5"
+nohash-hasher = "0.2.0"
 RayBNN_Sparse = "0.1.5"
 RayBNN_DataLoader = "0.1.3"
 
